[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylatro"
version = "0.1.0"
description = "A Python implementation of Balatro game mechanics and data structures"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Peter Hunt"}]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pylatro"]
